fdo#85112: reportdesign: fix SolarMutex assertion

A bit tricky, but all of the UNO wrappers for SdrObjects etc. in svx use
the SolarMutex for locking, so it's reasonable to expect that
reportdesign code also has to lock SolarMutex when it manipulates these.

Change-Id: I3cade8f53d7655e249b82673c87238d5a17256cb