reportdesign/source/core/api/Section.cxx
@@ -34,6 +34,7 @@
 #include "ReportDefinition.hxx"
 #include "Shape.hxx"
 #include <svx/unoshape.hxx>
+#include <vcl/svapp.hxx>
 #include "RptObject.hxx"
 #include "ReportDrawPage.hxx"
 #include <comphelper/property.hxx>
@@ -197,6 +198,7 @@ sal_Bool SAL_CALL OSection::supportsService( const OUString& _rServiceName ) thr
 
 void OSection::init()
 {
+    SolarMutexGuard g; // lock while manipulating SdrModel
     uno::Reference< report::XReportDefinition> xReport = getReportDefinition();
     ::boost::shared_ptr<rptui::OReportModel> pModel = OReportDefinition::getSdrModel(xReport);
     assert(pModel && "No model set at the report definition!");
